Update JavaToAbapTranslator.java